# StockAI-Trader

./: .env.example  .gitignore  README.md  api.py  env.py  pyproject.toml  scheduler.py
backend/: __init__.py
backend/app/: __init__.py
backend/app/api/: __init__.py  routes_analyze.py  routes_history.py  routes_symbols.py
backend/app/assets/: symbols_snapshot.json
backend/app/core/: __init__.py  llm_adapter.py  normalize.py
backend/app/schemas/: __init__.py  history.py  report.py  symbols.py
backend/app/services/: __init__.py  analyze.py  history.py  symbols.py
datahub/: __init__.py  akshare_api.py  cache.py  fetcher.py  indicators.py  macro.py  providers.py  scanner.py  tushare_api.py  watchlist.py
docs/: Implementation_Guide_v1.1.md  Implementation_Guide_v1.2.md  Implementation_Guide_v1.md  StockAI_Trader_PRD.md  StockAI_Trader_PRD_V2.md  V2:StockAI_Trader_PRD_V2.1.md  deployment_baremetal.md
docs/v2/: Implementation_Guide_v2.1_P0.md  StockAI_Trader_PRD_V2.1.md
engine/: __init__.py  analyzer.py  features.py  macro_analyzer.py  opportunity_filter.py  report.py  rules.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: AnalysisResult.vue  DailyReportViewer.vue  MacroOverview.vue  MarkdownRenderer.vue  (+2 more)
infra/: __init__.py  cache_store.py  rate_limit.py
infra/systemd/: stockai-trader.service
llm/: __init__.py  client.py
scripts/: deploy_baremetal.sh  run_daily_report.py  sync_symbols.py
(+20 files in other folders)
