[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockai-trader"
version = "0.1.0"
description = "StockAI Trader MVP backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pandas>=2.1.0",
  "numpy>=1.24.0",
  "yfinance>=0.2.40",
  "pydantic>=2.6.0",
  "python-dateutil>=2.8.2",
  "requests>=2.31.0",
  "apscheduler>=3.10.4",
  "tushare>=1.4.0",
  "redis>=5.0.0",
  "pymongo>=4.6.0",
  "pypinyin>=0.49.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27.0", "pytest>=8.0.0"]
storage = ["pyarrow>=14", "fastparquet>=2024.2.0"]
china = ["akshare>=1.12.89"]

[tool.setuptools]
packages = ["engine", "datahub"]
